--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                                <img id="pic" style="-webkit-user-select: none;cursor: zoom-in;"  src="https://scontent-dfw5-1.xx.fbcdn.net/v/t1.0-9/32503563_1689226361127075_47399564021334016_n.jpg?_nc_cat=109&amp;oh=319071295947991b1da053caca08716c&amp;oe=5C604278" width="215" height="215">  
+                                <img id="pic" style="-webkit-user-select: none;cursor: zoom-in;"  src="face.JPG" width="175" height="215">  
                             <br>
                             </div>
                             <div class="col-lg-0 col-md-1">
