chagned the contact

--- a/index.html
+++ b/index.html
@@ -178,6 +178,18 @@ Website              </a>
                       <h3 class="header col s12 light">Contact</h3>
               </div>
         <!--   Icon Section   -->
+              <div style="text-align: center">
+                <h5>Phone: (956) 459 - 0739</h5>
+                <h5>Email: 18emedina@gmail.com</h5>
+                <h5><a href="https://github.com/18eddymedina">Github</a></h5>
+                <h5><a href="https://www.facebook.com/eddy.medina.5">Facebook</a></h5>
+                <h5><a href="https://twitter.com/eddymedina17">Twitter</a></h5>
+                <h5><a href="https://www.linkedin.com/in/eduardo-medina-69509375/">LinkedIn</a></h5>
+                <br>
+                <p>or please feel free to send a message below.</p>
+              </div>
+
+
         <div class="row">
             <form class="col s12">
               <div class="row">
